made good progress

--- a/index.html
+++ b/index.html
@@ -46,53 +46,53 @@
         <main>
             <h1>Shows</h1> <!-- this has to match the active nav page-->
             <div class="imageParent">
-                <div>
+                <div class="card">
                     <img src="images/gallery01.webp" alt="Alice in Wonderland" width="500" height="400" loading="lazy">
-                    <p>Alice in Wonderland<br>March 1st - 9th</p>
+                    <p><b>Alice in Wonderland</b><br>March 1st - 9th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery02.webp" alt="As You Like It" width="500" height="400" loading="lazy">
-                    <p>As You Like It<br>March 10th - 23rd</p>
+                    <p><b>As You Like It</b><br>March 10th - 23rd</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery03.webp" alt="Bubble Boy" width="500" height="400" loading="lazy">
-                    <p>Bubble Boy<br>March 24th - April 6th</p>
+                    <p><b>Bubble Boy</b><br>March 24th - April 6th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery04.webp" alt="Bye Bye Birdie" width="500" height="400" loading="lazy">
-                    <p>Bye Bye Birdie<br>April 7th - 20th</p>
+                    <p><b>Bye Bye Birdie</b><br>April 7th - 20th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery05.webp" alt="Clue" width="500" height="400" loading="lazy">
-                    <p>Clue<br>April 21st - May 4th</p>
+                    <p><b>Clue</b><br>April 21st - May 4th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery06.webp" alt="Crafting a Killer" width="500" height="400" loading="lazy">
-                    <p>Crafting a Killer<br>May 5th - 18th</p>
+                    <p><b>Crafting a Killer</b><br>May 5th - 18th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery07.webp" alt="Footloose" width="500" height="400" loading="lazy">
-                    <p>Footloose<br>May 19th - June 1st</p>
+                    <p><b>Footloose</b><br>May 19th - June 1st</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery08.webp" alt="Hamlet" width="500" height="400" loading="lazy">
-                    <p>Hamlet<br>June 2nd - 15th</p>
+                    <p><b>Hamlet</b><br>June 2nd - 15th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery09.png" alt="The Lion King" width="500" height="400" loading="lazy">
-                    <p>The Lion King<br>June 16th - 29th</p>
+                    <p><b>The Lion King</b><br>June 16th - 29th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery10.webp" alt="The Phantom of the Opera" width="500" height="400" loading="lazy">
-                    <p>The Phantom of the Opera<br>June 30th - July 6th</p>
+                    <p><b>The Phantom of the Opera</b><br>June 30th - July 6th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery11.webp" alt="Shrek the Musical" width="500" height="400" loading="lazy">
-                    <p>Shrek the Musical<br>July 7th - 20th</p>
+                    <p><b>Shrek the Musical</b><br>July 7th - 20th</p>
                 </div>
-                <div>
+                <div class="card">
                     <img src="images/gallery12.webp" alt="The Wizard of Oz" width="500" height="400" loading="lazy">
-                    <p>The Wizard of Oz<br>July 21st - August 3rd</p>
+                    <p><b>The Wizard of Oz</b><br>July 21st - August 3rd</p>
                 </div>
 
 
