--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div id="headerWrapper">
         <header>
-            <a href="index.html"><img src="images/logo1x.png" alt="logo" width="62" height="50" srcset="images/logo1x.png 1x, images/logo2x.png, images/logo3x.png 3x"></a>
+            <a href="index.html"><img src="images/logo1x.png" alt="logo" width="62" height="50" srcset="images/logo1x.png 1x, images/logo2x.png 2x, images/logo3x.png 3x"></a>
             <h1>Performing Arts Center</h1>
             <a href><img src="images/phone.png" alt="phone icon" width="50" height="50"> </a>
         </header>
