added bullet entity

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div>
         <footer id="footerWrapper">
-            <p> &copy; <span id="year">x</span> Alondra Martinez   </p>
+            <p> &copy; <span id="year">x</span> &bull; Alondra Martinez   </p>
         </footer>
     </div>
 
